cmake_minimum_required(VERSION 3.10)
project (LOW_LATENCY)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET(OPT_FLAGS "-O0")
SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${OPT_FLAGS}")

# SET_SOURCE_FILES_PROPERTIES(low_latency.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(low_latency.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(low_latency LANGUAGE python SOURCES low_latency.i low_latency.c)
SWIG_LINK_LIBRARIES(low_latency ${PYTHON_LIBRARIES})
